# wsreplay.py

./: .gitignore  .gitlab-ci.yml  ReadMe.md  pyproject.toml
.ci/: pythonPackagesToInstallFromGit.txt
tests/: dump.har  tests.py
wsreplay/: __init__.py  __main__.py
wsreplay/backends/: har.py  mitmproxy.py
wsreplay/core/: __init__.py
